--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "google-geocoder": "^0.2.1",
+    "google-map-react": "^1.1.7",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap-datetimepicker": "0.0.22",
+    "react-datetime-bootstrap": "^1.4.7",
+    "react-datetime-picker": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
@@ -30,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.1.2"
   }
 }
